Add an endpoint for enabling monetisation on apps
