# backend/src/types/dashboard.rs
@@ -1,27 +1,20 @@
-use serde::{Deserialize, Serialize};
+use serde::Deserialize;
 #[cfg(feature = "openapi")]
 use utoipa::ToSchema;
-
-#[derive(Serialize)]
-#[cfg_attr(feature = "openapi", derive(ToSchema))]
-pub struct App {
-    #[cfg_attr(feature = "openapi", schema(example = "com.github.davidmhewitt.torrential"))]
-    pub id: String,
-    #[cfg_attr(feature = "openapi", schema(example = "https://github.com/davidmhewitt/torrential.git"))]
-    pub repository: String,
-    #[cfg_attr(feature = "openapi", schema(example = true))]
-    pub is_verified: bool,
-    #[cfg_attr(feature = "openapi", schema(example = "3.0.0"))]
-    pub version: Option<String>,
-}
 
 #[derive(Debug, Deserialize)]
 #[cfg_attr(feature = "openapi", derive(ToSchema))]
 
 pub struct CreateApp {
-    #[cfg_attr(feature = "openapi", schema(example = "com.github.davidmhewitt.torrential"))]
+    #[cfg_attr(
+        feature = "openapi",
+        schema(example = "com.github.davidmhewitt.torrential")
+    )]
     pub app_id: String,
-    #[cfg_attr(feature = "openapi", schema(example = "https://github.com/davidmhewitt/torrential.git"))]
+    #[cfg_attr(
+        feature = "openapi",
+        schema(example = "https://github.com/davidmhewitt/torrential.git")
+    )]
     pub repository: String,
 }
 
@@ -29,7 +22,10 @@ pub struct CreateApp {
 #[cfg_attr(feature = "openapi", derive(ToSchema))]
 
 pub struct AppUpdateSubmission {
-    #[cfg_attr(feature = "openapi", schema(example = "com.github.davidmhewitt.torrential"))]
+    #[cfg_attr(
+        feature = "openapi",
+        schema(example = "com.github.davidmhewitt.torrential")
+    )]
     pub app_id: String,
     #[cfg_attr(feature = "openapi", schema(example = "3.0.0"))]
     pub version_tag: String,
